[package]
name = "fruitcake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
itertools = "0.10.5"
maplit = "1.0.2"
criterion = "0.4.0"
rayon = "1.6.0"

[[bench]]
name = "benchmark"
harness = false